# Food_Effect_Covid

./: Project_2_Final_Report.docx  README.md  model.ipynb  pyproject.toml
GUI/: user_interface.py
Train_Model/: model.ipynb  model.pkl
