[tool.poetry]
name = "food-effect-covid"
version = "0.1.0"
description = ""
authors = ["Joseph Porrino <joeyporrino1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
tk = "^0.1.0"
pickle4 = "^0.0.1"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
